# CPPRayTracer

./: CMakeLists.txt  README.md
OpenGL/: CMakeLists.txt  glfwExample.cpp
examples/: test_Timer.cpp
renderer/: AABoundingBox.cpp  AABoundingBox.h  BVHNode.cpp  BVHNode.h  BlinnPhong.cpp  BlinnPhong.h  Box.cpp  Box.h  CMakeLists.txt  Camera.h  CoordSys.cpp  CoordSys.h  CoordSystest.cpp  Framebuffer.cpp  Framebuffer.h  HitStruct.h  Lambertian.cpp  Lambertian.h  Light.h  MirrorShader.cpp  MirrorShader.h  NormalShader.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Ray.cpp  Ray.h  SceneContainer.cpp  SceneContainer.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Vec3D.cpp  Vec3D.h  boxTest.cpp  genRaytest.cpp  (+9 more)
